--- a/index.html
+++ b/index.html
@@ -39,26 +39,7 @@
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3"
                             id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
-                        <!-- <form class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                            <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ...">
-                                <div class="input-group-append"><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
-                            </div>
-                        </form> -->
                         <ul class="nav navbar-nav flex-nowrap ml-auto">
-                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link"
-                                    data-toggle="dropdown" aria-expanded="false" href="#"><i
-                                        class="fas fa-search"></i></a>
-                                <div class="dropdown-menu dropdown-menu-right p-3 animated--grow-in" role="menu"
-                                    aria-labelledby="searchDropdown">
-                                    <form class="form-inline mr-auto navbar-search w-100">
-                                        <div class="input-group"><input class="bg-light form-control border-0 small"
-                                                type="text" placeholder="Search for ...">
-                                            <div class="input-group-append"><button class="btn btn-primary py-0"
-                                                    type="button"><i class="fas fa-search"></i></button></div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </li>
                             <li class="nav-item dropdown no-arrow mx-1" role="presentation">
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
                                         data-toggle="dropdown" aria-expanded="false" href="#"><span
@@ -184,7 +165,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Dashboard</h3>
+                        <h3 class="text-dark mb-0">Daftar Pendaftaran</h3>
                     </div>
                     <div class="row mb-3">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-2">
@@ -200,20 +181,28 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <div
-                                                class="text-uppercase text-primary font-weight-bold mb-2 admission-id ">
-                                                No Peserta: 2020010830
+                                            <label for="">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1 ">
+                                                2020010830
+                                            </div>
 
+                                            <label for="">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1 admission-id">
+                                                <div><b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
                                             </div>
-                                            <div class="text-dark admission-detail">
-                                                <div>Periode: <b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
-                                                <div>Status: <span class=" badge-status">Silahkan memilih program
+
+                                            <label for="">Status</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <div><span class=" badge-status">Silahkan memilih program
                                                         studi.</span> </div>
-                                                <div class="mt-2">
-                                                    <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                    16:37:36
-                                                </div>
                                             </div>
+
+                                            <label for="">Tanggal Daftar</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                16:37:36
+                                            </div>
+
                                             <div class="row justify-content-between mt-2 px-2">
                                                 <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
                                                     <button class="btn btn-action-1 btn-admission-action">
@@ -222,7 +211,7 @@
                                                 </div>
 
                                                 <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-danger btn-admission-action mr-0">
+                                                    <button class="btn btn-action-2 btn-admission-action mr-0">
                                                         Batalkan Pendaftaran
                                                     </button>
                                                 </div>
@@ -262,7 +251,7 @@
                                                 </div>
 
                                                 <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-danger btn-admission-action mr-0">
+                                                    <button class="btn btn-action-2 btn-admission-action mr-0">
                                                         Batalkan Pendaftaran
                                                     </button>
                                                 </div>
@@ -302,7 +291,7 @@
                                                 </div>
 
                                                 <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
-                                                    <button class="btn btn-danger btn-admission-action mr-0">
+                                                    <button class="btn btn-action-2 btn-admission-action mr-0">
                                                         Batalkan Pendaftaran
                                                     </button>
                                                 </div>
