added profile page

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                             <li class="nav-item dropdown no-arrow" role="presentation">
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
                                         data-toggle="dropdown" aria-expanded="false" href="#"><span
-                                            class="d-none d-lg-inline mr-2 text-gray-600 small">Rintaro Okabe</span><img
-                                            class="border rounded-circle img-profile" src="assets/img/avatar.jpg"></a>
+                                            class="d-none d-lg-inline mr-2 text-gray-600 small">Rintarou Okabe</span><img
+                                            class="border rounded-circle img-profile" src="assets/img/avatar2.jpg"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in" role="menu">
                                         <a class="dropdown-item" role="presentation" href="#"><i
                                                 class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a
@@ -229,20 +229,28 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <div
-                                                class="text-uppercase text-primary font-weight-bold mb-2 admission-id ">
-                                                No Peserta: 2020010830
+                                            <label for="">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1 ">
+                                                2020010830
+                                            </div>
 
+                                            <label for="">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1 admission-id">
+                                                <div><b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
                                             </div>
-                                            <div class="text-dark admission-detail">
-                                                <div>Periode: <b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
-                                                <div>Status: <span class=" badge-status">Silahkan memilih program
+
+                                            <label for="">Status</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <div><span class=" badge-status">Silahkan memilih program
                                                         studi.</span> </div>
-                                                <div class="mt-2">
-                                                    <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                    16:37:36
-                                                </div>
                                             </div>
+
+                                            <label for="">Tanggal Daftar</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                16:37:36
+                                            </div>
+
                                             <div class="row justify-content-between mt-2 px-2">
                                                 <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
                                                     <button class="btn btn-action-1 btn-admission-action">
@@ -263,26 +271,34 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col-12">
                             <div class="card shadow card-border-left py-2">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <div
-                                                class="text-uppercase text-primary font-weight-bold mb-2 admission-id ">
-                                                No Peserta: 2020010830
+                                            <label for="">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1 ">
+                                                2020010830
+                                            </div>
 
+                                            <label for="">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1 admission-id">
+                                                <div><b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
                                             </div>
-                                            <div class="text-dark admission-detail">
-                                                <div>Periode: <b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
-                                                <div>Status: <span class=" badge-status">Silahkan memilih program
+
+                                            <label for="">Status</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <div><span class=" badge-status">Silahkan memilih program
                                                         studi.</span> </div>
-                                                <div class="mt-2">
-                                                    <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
-                                                    16:37:36
-                                                </div>
                                             </div>
+
+                                            <label for="">Tanggal Daftar</label>
+                                            <div class="text-dark font-weight-bold mb-1">
+                                                <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                16:37:36
+                                            </div>
+
                                             <div class="row justify-content-between mt-2 px-2">
                                                 <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3 col-xl-2 p-1">
                                                     <button class="btn btn-action-1 btn-admission-action">
