--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html"><i
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"><i
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="profile"><i
                                 class="fas fa-user"></i><span>Data Diri</span></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="table.html"><i
                                 class="fas fa-table"></i><span>Daftar Baru</span></a></li>
