added daftar baru

--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"><i
                                 class="fas fa-user"></i><span>Data Diri</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="table.html"><i
-                                class="fas fa-table"></i><span>Daftar Baru</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login.html"><i
-                                class="far fa-user-circle"></i><span>Login</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="register.html"><i
-                                class="fas fa-user-circle"></i><span>Register</span></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="daftar_baru.html"><i
+                                class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
                         id="sidebarToggle" type="button"></button></div>
@@ -68,7 +64,7 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-2">
-                            <a class="btn btn-primary btn-add-admission" role="button" href="#">
+                            <a class="btn btn-primary btn-add-admission" role="button" href="daftar_baru.html">
                                 <i class="fas fa-plus-circle fa-sm text-white-50"></i>&nbsp;Daftar Baru</a>
                         </div>
                     </div>
