--- a/profile.html
+++ b/profile.html
@@ -22,14 +22,10 @@
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html"><i
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="profile"><i
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="profile.html"><i
                                 class="fas fa-user"></i><span>Data Diri</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="table.html"><i
-                                class="fas fa-table"></i><span>Daftar Baru</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login.html"><i
-                                class="far fa-user-circle"></i><span>Login</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="register.html"><i
-                                class="fas fa-user-circle"></i><span>Register</span></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="daftar_baru.html"><i
+                                class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
                         id="sidebarToggle" type="button"></button></div>
