--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html"><i
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html"><i
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="profile.html"><i
                                 class="fas fa-user"></i><span>Data Diri</span></a></li>
@@ -51,7 +51,7 @@
                                                 class="fas fa-key fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Ubah
                                             Password</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation"
-                                            href="#"><i
+                                            href="index.html"><i
                                                 class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
                                 </div>
