--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </div>
                         <div class="container-img">
                             <img class="mb-2" src="assets/img/banner_pmb.jpg" alt="">
-                            <button class="btn btn-primary btn-info btn-sm">INFO</button>
+                            <a class="btn btn-info btn-sm" href="http://www.maranatha.edu/admission/">INFO</a>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-form">
@@ -51,7 +51,8 @@
                                 <input type="password" class="form-control" id="password">
                             </div>
                             <div class="form-group">
-                                <button class="btn btn-primary btn-block btn-login" onclick="location.href='dashboard.html'">LOGIN</button>
+                                <button class="btn btn-primary btn-block btn-login"
+                                    onclick="location.href='dashboard.html'">LOGIN</button>
                             </div>
                             <hr>
                             <div class="text-center">
