--- a/jalur-nontes.html
+++ b/jalur-nontes.html
@@ -60,27 +60,68 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Strata Akademik</h3>
+                        <h3 class="text-dark mb-0">Pilih Non Tes</h3>
                     </div>
                     <div class="row">
-                        <div class="col-12">
-                            <div class="card bg-strata-1 shadow card-strata mb-3">
-                                <a href="jalur.html">
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-jalur-2 shadow card-strata mb-3">
+                                <a href="">
                                     <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>D3 / S1</h4>
-                                        <h6 class="m-0">Diploma atau Sarjana</h6>
+                                        <h4 class="m-0">Beasiswa Akademik</h4>
                                     </div>
                                 </a>
                             </div>
                         </div>
-                        <div class="col-12">
-                            <div class="card bg-strata-2 shadow card-strata">
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-jalur-2 shadow card-strata mb-3">
                                 <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>S2</h4>
-                                        <h6 class="m-0">Magister</h6>
+                                    <div class="card-body text-white text-center">  
+                                        <h4 class="m-0">Beasiswa Non Akademik</h4>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-jalur-2 shadow card-strata mb-3">
+                                <a href="">
+                                    <div class="card-body text-white text-center">  
+                                        <h4 class="m-0">Beasiswa OSC MEDCOM</h4>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-jalur-2 shadow card-strata mb-3">
+                                <a href="">
+                                    <div class="card-body text-white text-center">  
+                                        <h4 class="m-0">Beasiswa Maranatha Peduli</h4>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-jalur-2 shadow card-strata mb-3">
+                                <a href="">
+                                    <div class="card-body text-white text-center">  
+                                        <h4 class="m-0">Beasiswa Mitra Sekolah dan Gereja</h4>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-jalur-2 shadow card-strata mb-3">
+                                <a href="">
+                                    <div class="card-body text-white text-center">  
+                                        <h4 class="m-0">Program Fast Track (Akselerasi)</h4>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-jalur-2 shadow card-strata mb-3">
+                                <a href="">
+                                    <div class="card-body text-white text-center">  
+                                        <h4 class="m-0">UTBK</h4>
                                     </div>
                                 </a>
                             </div>
