--- a/jalur.html
+++ b/jalur.html
@@ -60,27 +60,25 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Strata Akademik</h3>
+                        <h3 class="text-dark mb-0">Pilih Jalur</h3>
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <div class="card bg-strata-1 shadow card-strata mb-3">
-                                <a href="jalur.html">
+                            <div class="card bg-jalur-1 shadow card-strata mb-3">
+                                <a href="jalur-nontes.html">
                                     <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>D3 / S1</h4>
-                                        <h6 class="m-0">Diploma atau Sarjana</h6>
+                                        <i class="fa fa-scroll fa-3x mb-2"></i>
+                                        <h4 class="m-0">Jalur Non Tes</h4>
                                     </div>
                                 </a>
                             </div>
                         </div>
                         <div class="col-12">
-                            <div class="card bg-strata-2 shadow card-strata">
+                            <div class="card bg-jalur-2 shadow card-strata">
                                 <a href="">
                                     <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>S2</h4>
-                                        <h6 class="m-0">Magister</h6>
+                                        <i class="fa fa-desktop fa-3x mb-2"></i>
+                                        <h4 class="m-0">Jalur Tes</h4>
                                     </div>
                                 </a>
                             </div>
